# reachy-mini-cam-relay

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: preview.yml  release.yml  tests.yml
debian/: reachy-mini-cam-relay.postinst  reachy-mini-cam-relay.postrm  reachy-mini-cam-relay.prerm
packaging/systemd/: reachy-mini-cam-relay-v4l2loopback.conf  reachy-mini-cam-relay-v4l2loopback.modprobe  reachy-mini-cam-relay@.service
scripts/: install-gst-webrtc-plugin.sh  setup-v4l2loopback.sh  setup-virtual-audio.sh
src/reachy_mini_cam_relay/: cli.py  head_track.py
tests/: test_audio_constants.py  test_close.py  test_connect_with_backoff.py  test_main.py  test_pactl_sinks.py  test_session.py  test_worker_loops.py
