[project]
name = "reachy-mini-cam-relay"
version = "0.0.0"
description = "Relay the Reachy Mini camera, microphone and speakers as Linux virtual devices for use in any browser meeting app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Chris", email = "goabonga@pm.me" },
]
keywords = [
    "reachy",
    "reachy-mini",
    "robotics",
    "telepresence",
    "webrtc",
    "v4l2",
    "v4l2loopback",
    "virtual-camera",
    "virtual-microphone",
    "video-conferencing",
    "pulseaudio",
    "pipewire",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "reachy-mini>=1.7.0",
    "pyvirtualcam>=0.11",
    "numpy",
]

[project.optional-dependencies]
head-tracking = [
    "mediapipe>=0.10",
    "opencv-python>=4.8",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/goabonga/reachy-mini-cam-relay"
Repository = "https://github.com/goabonga/reachy-mini-cam-relay"
Issues = "https://github.com/goabonga/reachy-mini-cam-relay/issues"
Changelog = "https://github.com/goabonga/reachy-mini-cam-relay/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "commitizen>=3.29",
    "hatchling>=1.25",
    "ruff>=0.7",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
reachy-mini-cam-relay = "reachy_mini_cam_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_cam_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=reachy_mini_cam_relay",
    "--cov-report=term-missing",
    "--cov-fail-under=100",
]

[tool.coverage.run]
# head_track.py is mostly MediaPipe/GStreamer orchestration with threads —
# tested via integration paths, not the unit suite.
omit = ["*/head_track.py"]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/reachy_mini_cam_relay/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
