[project]
name = "reachy-mini-cam-relay"
version = "0.1.0"
description = "Relay the Reachy Mini camera, microphone and speakers as Linux virtual devices for use in any browser meeting app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris" }]
dependencies = [
    "reachy-mini>=1.7.0",
    "pyvirtualcam>=0.11",
    "numpy",
]

[dependency-groups]
dev = [
    "commitizen>=3.29",
    "hatchling>=1.25",
    "ruff>=0.7",
]

[project.scripts]
reachy-mini-cam-relay = "reachy_mini_cam_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_cam_relay"]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/reachy_mini_cam_relay/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
