[project]
name = "reachy-mini-cam-relay"
version = "0.1.0"
description = "Relay the Reachy Mini camera, microphone and speakers as Linux virtual devices for use in any browser meeting app"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Chris" }]
dependencies = [
    "reachy-mini>=1.7.0",
    "pyvirtualcam>=0.11",
    "numpy",
]

[dependency-groups]
dev = [
    "commitizen>=3.29",
    "hatchling>=1.25",
    "ruff>=0.7",
    "mypy>=1.8",
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
reachy-mini-cam-relay = "reachy_mini_cam_relay.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reachy_mini_cam_relay"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage gate is set just below the current state so it acts as a regression
# guard. The orchestrating `main()` is intentionally not unit-tested — it
# wires pyvirtualcam, MediaManager, signal handlers and worker threads
# together and belongs in an integration test layer, not here. Raise the bar
# as that layer grows.
addopts = [
    "--cov=reachy_mini_cam_relay",
    "--cov-report=term-missing",
    "--cov-fail-under=40",
]

[tool.mypy]
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_files = [
    "src/reachy_mini_cam_relay/__init__.py:__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
changelog_incremental = true
